tests/valid/shadowing/shadow_multiple_levels_ok.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    let x: unrestricted isize = 1;
    let x: unrestricted isize = 2;
    x
}
