tests/invalid/struct/linear_struct_no_linear_fields_not_moved.facet
struct Box {
  x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted () {
  let b: linear Box = Box { x = 1, y = true };
  ()
}
